Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.0
-
Fix Version/s: 10.0.32
-
Component/s: Server
-
Labels:None
Description
GCC 7 is reporting the following -Wimplicit-fallthrough warnings for 10.0 after my fix. Many of these look like genuine bugs.
mysys/ma_dyncol.c: In function 'mariadb_dyncol_val_double':
|
mysys/ma_dyncol.c:4033:7: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
extra/my_print_defaults.c: In function 'get_one_option':
|
extra/my_print_defaults.c:131:7: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
extra/my_print_defaults.c:136:7: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
storage/connect/ha_connect.cc: In function 'char* GetListOption(PGLOBAL, const char*, const char*, const char*)':
|
storage/connect/ha_connect.cc:2550:35: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
storage/connect/ha_connect.cc:2806:36: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
storage/connect/ha_connect.cc:2922:15: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
storage/connect/ha_connect.cc:2934:15: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
storage/connect/ha_connect.cc:2941:15: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
storage/connect/ha_connect.cc:4313:15: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
storage/connect/ha_connect.cc:4338:15: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
storage/connect/ha_connect.cc: In function 'int connect_assisted_discovery(handlerton*, THD*, TABLE_SHARE*, HA_CREATE_INFO*)':
|
storage/connect/ha_connect.cc:5515:13: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
storage/connect/ha_connect.cc:6074:9: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
storage/federated/ha_federated.cc:1403:38: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
storage/federated/ha_federated.cc:1436:9: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
storage/federatedx/ha_federatedx.cc:1322:36: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
storage/federatedx/ha_federatedx.cc:1355:9: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
storage/heap/hp_extra.c: In function 'heap_extra':
|
storage/heap/hp_extra.c:36:5: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
storage/connect/plugutil.c: In function 'PlugInit':
|
storage/connect/filamap.cpp:350:5: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
storage/connect/filamgz.cpp:1020:16: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
storage/connect/json.cpp: In function 'JSON* ParseJson(PGLOBAL, char*, int, int*, bool*)':
|
storage/connect/json.cpp:152:9: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
storage/connect/myutil.cpp: In function 'int MYSQLtoPLG(char*, char*)':
|
storage/connect/myutil.cpp:67:14: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
storage/connect/myutil.cpp: In function 'int MYSQLtoPLG(int, char*)':
|
storage/connect/myutil.cpp:236:18: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
storage/connect/myutil.cpp:224:7: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
storage/connect/reldef.cpp:297:8: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
storage/connect/reldef.cpp:339:19: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
storage/connect/tabvir.cpp:171:21: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
storage/connect/tabvir.cpp:177:21: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
sql-common/client.c: In function 'mysql_read_default_options':
|
sql-common/client.c:1150:29: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
storage/maria/ma_key_recover.c: In function '_ma_apply_redo_index':
|
storage/maria/ma_key_recover.c:1171:18: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
client/mysql.cc: In function 'my_bool get_one_option(int, const my_option*, char*)':
|
client/mysql.cc:1893:14: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
sql-common/client.c: In function 'mysql_read_default_options':
|
sql-common/client.c:1150:29: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
sql/item_func.cc:863:23: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
sql/log.cc:9402:9: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
sql/sql_repl.cc: In function 'void mysql_binlog_send(THD*, char*, my_off_t, ushort)':
|
sql/sql_repl.cc:2663:9: warning: this statement may fall through [-Wimplicit-fallthrough=]
|
Attachments
Issue Links
- relates to
-
MDEV-12358 GCC 7 issues
-
- Closed
-