MDEV-12824 GCC 7 warning: this statement may fall through [-Wimplicit-fallthrough=]